# meshlink_nuclearhack.mephi

./: Architecture.md  README.md  МЕШЛИНК.pptx  ПРЕЗЕНТАЦИЯ.pptx
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/meshlink/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/meshlink/: Appforegroundtracker.kt  Globalcallmanager.kt  HandlerFactory.kt  MainActivity.kt  MeshLinkApp.kt  Meshlinkappprovider.kt
android/app/src/main/java/com/example/meshlink/core/: Meshlogger.kt  NativeCore.kt
android/app/src/main/java/com/example/meshlink/data/: AppContainer.kt
android/app/src/main/java/com/example/meshlink/network/: AudioPlaybackManager.kt  CallManager.kt  NetworkManager.kt  (+1 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night/: font_certs.xml  themes.xml
android/app/src/main/res/xml/: file_provider_paths.xml
android/app/src/test/java/com/example/meshlink/: ExampleUnitTest.kt  MeshLinkSuite.kt
android/gradle/: libs.versions.toml
core/: %DEST%  Cargo.toml
core/.cargo/: config.toml
core/src/: jni_bridge.rs  lib.rs
core/src/connection/: manager.rs  mod.rs  tcp.rs
core/src/crypto/: keypair.rs  mod.rs  peer_id.rs
core/src/peer/: mod.rs  peer.rs
core/src/protocol/: codec.rs  file_transfer.rs  message.rs  mod.rs
core/src/routing/: mod.rs
core/src/storage/: mod.rs
core/src/transport/: mod.rs
(+68 files in other folders)
