[package]
name = "meshlink_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "meshlink_core"
crate-type = ["cdylib"]

[dependencies]
# JNI bridge
jni = { version = "0.21", features = ["invocation"] }

# Crypto — Ed25519
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Serialization (для routing table JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Android logging
android_logger = "0.13"
log = "0.4"

# Один раз инициализировать глобальное состояние
once_cell = "1.19"

[profile.release]
opt-level = "z"      # минимальный размер .so
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
